<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="SCAN">点击设备连接</string>
    <string name="btnLeft">左转</string>
    <string name="btnRight">右转</string>
    <string name="btnUp">上升</string>
    <string name="btnDown">下降</string>
    <string name="newscare">关心信息</string>
    <string name="clothon">展开</string>
    <string name="carpause">暂停</string>
    <string name="newskind">信息分类</string>
    <string name="clothupdown">调整</string>
    <string name="setting">设置</string>
    <string name="app_name">车衣天下</string>
    <string name="taobao">淘宝</string>
    <string name="ali">阿里</string>
    <string name="jingdong">京东</string>
    <string name="weidian">微店</string>
    <string name="startAssistantLocation">启动H5定位</string>
    <string name="urlLocation">浏览器定位</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="cancel">取消</string>
    <string name="title_assistantLocation">H5辅助定位展示</string>
    <string name="stopAssistantLocation">停止H5辅助定位</string>
    <string name="about">About</string>
    <string name="scanresult">车衣天下</string>
    <string name="scansult">车衣天下</string>
    <string name="car">车衣</string>
    <string name="obd">OBD</string>
    <string name="daohang">导航</string>
    <string name="carClothOn">展开</string>
    <string name="carClothOff">收起</string>
    <string name="user">用户</string>
    <string name="set">设置</string>
    <string name="cfg">Cfg</string>
    <string name="workstatues">Work statues</string>
    <string name="yourandroidversionistoolow">Your android version is too low</string>
    <string name="rssi">Rssi: </string>
    <string name="db">db</string>
    <string name="mac">Mac: </string>
    <string name="battery">battery: </string>
    <string name="percent">%</string>
    <string name="major">major: </string>
    <string name="minor">minor: </string>
    <string name="measur">Measur: </string>
    <string name="uuid">UUID: </string>
    <string name="setlv">Lv: </string>
    <string name="back">Back</string>
    <string name="advdata">Adv data</string>
    <string name="analysisadvdata">Analysis Adv data</string>
    <string name="connect">Connect</string>
    <string name="send">Send</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="clear">clear</string>
    <string name="data">Data</string>
    <string name="cmd">Cmd</string>
    <string name="datamodel">Data Model</string>
    <string name="cmdmodel">Cmd Model</string>
    <string name="modify">modify</string>
    <string name="commonparameters">common parameters</string>
    <string name="allparameters">all parameters</string>
    <string name="disall">dis all</string>
    <string name="major_0_65535">major(0-65535): </string>
    <string name="minor_0_65535">minor(0-65535): </string>
    <string name="measur_0_99">Measur(0-99): </string>
    <string name="sendpower_abc">sendpower(A,B,C)</string>
    <string name="sendhz_100_2000">send hz(100-2000):ms</string>
    <string name="newpwd">new pwd(6):</string>
    <string name="deviceinfreadonly">deviceinf(readonly)</string>
    <string name="versionnum">version num: </string>
    <string name="setundeverlop">set undeverlop</string>
    <string name="beaconprivateparams">private params</string>
    <string name="beaconid">beacon ID</string>
    <string name="broadcastweight">广播比重:(0-10),0为关闭</string>
    <string name="beaconpublicparams">public params</string>
    <string name="sendpower_abcd">sendpower(A(min),B,C)</string>
    <string name="smartuser">smart user</string>
    <string name="mtbeaconuser">mtbeacon user</string>
    <string name="mtseriuser">mtseri user</string>
    <string name="mtwxuser">mtwx user</string>
    <string name="bledevelopuser">bledevelopuser</string>
    <string name="appcfg">App Cfg</string>
    <string name="oad">OAD</string>
    <string name="listen">listen</string>
    <string name="unlisten">unlisten</string>
    <string name="pwd">pwd</string>
    <string name="wxappid">appID</string>
    <string name="wxappsecret">appsecret</string>
	<string name="wxcfg">wxcfg</string>
	<string name="registertocloud">register to cloud</string>
	<string name="crypt">crypt</string>
	<string name="connectoutapp">connect out app</string>
	<string name="productid">product id</string>
	
	<string name="enable">enable</string>
	<string name="disable">disable</string>
	
	<string name="datas">Datas:</string>
	
	<string name="dismiss">dismiss</string>
	
	<string name="read">read</string>
	
	<string name="usertype">user type</string>
	
	<string name="version">Version</string>
	<string name="company">SZMT tec</string>
	<string name="addr">Addr:SZ China</string>
	<string name="web">web：http://www.mantoukeji.cn/</string>
	<string name="tel">Sale TEL：18823335955</string>
	<string name="tecsupport">tec QQ：446876407</string>
	<string name="buy">商超</string>
</resources>