<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/conect_flag_btn"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connected"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="车衣天下"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_searchDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:onClick="SearchDevice"
            android:text="搜索"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.cheyitianxia.bletools.MyScrollView
            android:id="@+id/viewflipper_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:scrollbars="none" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ViewFlipper
                    android:id="@+id/mViewFlipper_vf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:id="@+id/ll1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="180dip"
                            android:background="@drawable/a"
                            android:contentDescription="@string/app_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="180dip"
                            android:background="@drawable/b"
                            android:contentDescription="@string/app_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="180dip"
                            android:background="@drawable/c"
                            android:contentDescription="@string/app_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="180dip"
                            android:background="@drawable/d"
                            android:contentDescription="@string/app_name" />
                    </LinearLayout>
                </ViewFlipper>

                <LinearLayout
                    android:id="@+id/home_data_radio_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mViewFlipper_vf" >

                    <include layout="@layout/home_data_bar" />
                </LinearLayout>
            </RelativeLayout>
        </com.cheyitianxia.bletools.MyScrollView>

        <LinearLayout
            android:id="@+id/sl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewflipper_scrollview"
            android:layout_marginTop="10dip"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/sudu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false" >

                <LinearLayout
                    android:id="@+id/tv_car_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="转速"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dip"
                        android:text="0 km/h"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_car_oilmass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="油量"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_oilmass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dip"
                        android:text="0%"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_car_oilwear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="油耗"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_oilwear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dip"
                        android:text="0 L/KM"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_car_elect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="电量"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_elect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dip"
                        android:text="0 V"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Lay_Led"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/image_led"
                    android:layout_width="40dip"
                    android:layout_height="30dip"
                    android:src="@drawable/ratio_img_style" />

                <TextView
                    android:id="@+id/tv_led"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LED" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sl"
            android:layout_marginTop="20dip"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_alignParentLeft="true"
                android:baselineAligned="false" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/btn_carCloth"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:background="@drawable/shape1"
                        android:text="@string/car" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relate2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative2"
                android:layout_marginLeft="40dip"
                android:layout_marginRight="40dip"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/btn_obd"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:background="@drawable/shape1"
                        android:text="@string/obd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/btn_daohang"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:background="@drawable/shape1"
                        android:text="@string/daohang" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relate2"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_buy"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="60dip"
                        android:layout_height="60dip"
                        android:background="@drawable/shape1"
                        android:text="商超" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/L1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/btn_carClothOn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/shape"
                    android:text="@string/carClothOn"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/L4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/btn_carClothOff"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/shape"
                    android:text="@string/carClothOff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/btn_user0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/shape"
                    android:text="@string/user" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/btn_set0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/shape"
                    android:text="@string/set" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>